pyglet 1.4.9
Bugfix release

Bugfixes
--------
- Fix TextLayoutGroup consolidation when using custom Groups for Labels.


pyglet 1.4.8
Bugfix release

Bugfixes
--------
- FFmpeg: fix an occasional crash during seek operation.
- Revert Event Dispatcher changes from v1.4.7 due to possible bug.
- Linux: Warn on failure to set vsync, instead of crashing.


pyglet 1.4.7
Bugfix and small improvement release

Bugfixes
--------
- Allow creation of non-power-of-two compressed Textures. (#78)
- Fix EventDispatchers surpressing `AttributeError`s. (#87)
- Fix external lib loading on Windows under Python 3.8. (#90)

Improvements
------------
- Windows: Add support for `Desktop Window Manager` composition for smoother rendering.
- TextureAtlases allow a single pixel border to avoid rendering artifacts.
- Add support for `conda`-installed FFmpeg on macOS (#92)


pyglet 1.4.6
Bugfix release

Bugfixes
--------
- Fix PNG encoder saving upside-down images due to incorrect pitch. (#83)
- pyglet.info shows more platform specific information.


pyglet 1.4.5
Bugfix and small improvement release

Bugfixes
--------
- Fix Allocator creating orphaned regions.
- Allow npot compressed texture loading.
- Fix MachOLibraryLoader failing on lib names containing extra "."s.

Improvements
------------
- Documentation has been rebased on the standard RTD theme.
- Other documentation clarifications and improvements.
- New `MouseStateHandler` convenience class.


pyglet 1.4.4
Bugfix release.

Bugfixes
--------
- Fixed incorrect glXSwapIntervalEXT arguments for Xlib contexts.


pyglet 1.4.3
Bugfix release.

Bugfixes
--------
- Fix crash due to inconsistent API when changing Label or HTMLLabel color. (#45)
- Add support for GLX_EXT_swap_control on Linux platforms.


pyglet 1.4.2
Bugfix and cleanup release.

Improvements
------------
- Removed broken projects from /contrib
- Update setup.py with project_urls and long_description.